<resources>
    <string name="app_name">Peazy</string>
    <string name="connection_failed">Connection Failed</string>

    <string name="mainactivity_title">Join to Peazy</string>
    <string name="login">Log in</string>
    <string name="or">or</string>
    <string name="create_acc">Create new account</string>
    <string name="terms_msg"><![CDATA[By Continuing, you agree to our<\br><b>Terms</b> and <b>Privacy Policy</b>]]></string>

    <string name="loginactivity_title">Log in to Peazy</string>
    <string name="email_msg">Email address</string>
    <string name="pws_msg">Password</string>
    <string name="forgotpws">Forgot Password?</string>

    <string name="SignUpactivity_title">Welcome to Peazy</string>
    <string name="signup">Sign Up</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Nearby Bars/ Restaurant</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_oderhistory">Order History</string>
    <string name="menu_bokkinghistory">Booking History</string>
    <string name="menu_logout">Logout</string>

    <!--delete it -->
    <string name="detail">Madbreaks There is nothing "serendipitous" about it, EditText IS a TextView with a few added methods and overrides that is specifically tailored to accommodate varying length text. In particular EditText overrides the return value for the TextView getDefaultMovementMethod function. The default implementation returns NULL, EditText basically does the same thing all these other answers are suggesting. As far as using the tools that Android provides is concerned, the EditText class is far less likely to become deprecated than any of the</string>
    <string name="booktable">Book a Table</string>
    <string name="odernow">Oder Now</string>
    <string name="num_person">How many person</string>
    <string name="title_date"><![CDATA[Select your time & Date]]></string>
    <string name="book_now">Book Now</string>
    <string name="close">close</string>
    <string name="expand">expand</string>
    <string name="tb_book_note">You need to book a table 3hrs before</string>
    <string name="view_cart">View Cart</string>
    <string name="msgorder">Where are you\n located at?</string>
    <string name="mssuccess">Successfully</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="msgbook">Your table has been booked\n successfully under the name\n</string>
    <string name="msgtablenum">Table No.</string>
    <string name="thanksmsg">Thanks!</string>
    <string name="lbl_add_item">Add More Item</string>
    <string name="pay_now">Pay Now</string>
    <string name="subtotal">Subtotal</string>
    <string name="vat">VAT</string>
    <string name="payservicefee">Peazy-service fee</string>
    <string name="titleMethod">Select Payment Method</string>
    <string name="pay_savecard">Saved Card</string>
    <string name="pay_addnewcard">Add New Card</string>
    <string name="CardNumber">Card Number</string>
    <string name="Cardholdername">Card Holder Name</string>
    <string name="bt_saveCard">Save Card</string>
    <string name="pay_entercvv">Provide valid CVV</string>
    <string name="exdate">Exp. Date</string>
    <string name="CardCVV">CVC</string>
    <string name="acceptoder">Order Accepted!</string>
    <string name="acceptodermsg">Your order has been accepted. You\n will receive it soon!</string>
    <string name="estimateTime">Estimate Time</string>
    <string name="bt_ordermore">Order More</string>
    <string name="bt_checkorder">Check Order Details</string>
    <string name="menutitle">What would you like to order?</string>
    <string name="notifications_admin_channel_name">peazychannelname</string>
    <string name="notifications_admin_channel_description">peazydescription</string>
    <string name="confimorder">Confirm Order</string>
    <string name="inctax">Inc. tax</string>
    <string name="choosepaymethod_title">Choose your\n payment method</string>
    <string name="Creditcard">Credit card</string>
    <string name="SamsungPay">Samsung Pay</string>
    <string name="change_pws">Change Password</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="search_here">Search Here</string>
    <string name="title_activity_maps">Home</string>
    <string name="drawer_error">somthing wrong</string>
    <string name="lbl_add_instruction">Add Instruction</string>
    <string name="instruction">Instructions</string>
    <string name="hint_instruction">Type your instruction here...</string>
    <string name="bt_add">Add</string>
    <string name="lbl_swipe">Swipe Right to Pay Now</string>
    <string name="lbl_addtip">Add Tip</string>
    <string name="bt_lbl_91">$91</string>
    <string name="bt_lblCHF">CHF</string>
    <string name="bt_lblsel_amount">Select\nAmount</string>
    <string name="bycash">By Cash</string>
    <string name="lbl_pickup">Pick Up</string>
    <string name="lbl_tableservice">Table Service</string>
    <string name="noteforoder">Note: We have self service so please\n pick your order</string>
    <string name="lbl_pickip_title">Select your pick up time</string>
    <string name="settime">Select Time</string>
    <string name="totalbill">Total Bill</string>
    <string name="change_table">Change Table</string>
    <string name="table_no">Table No.</string>
    <string name="tableordermsg">Your table is booked succefully</string>
    <string name="view_order">View Details</string>
    <string name="edit_profile">edit profile</string>
    <string name="phone_number">Phone Number</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="feedback">Feedback</string>
    <string name="as_soonpossible">As soon as possible</string>
    <string name="as_select_time">Select Time</string>
    <string name="servicefee">Service Fee</string>
    <string name="oldpws">Old Password</string>
    <string name="changepwsTitle">Change Password</string>
    <string name="changetable">Change Table No.</string>
    <string name="roundup">Round up</string>
    <string name="cfval2">2</string>
    <string name="cfval5">5</string>
    <string name="title_activity_maps2">Map</string>
    <string name="publish_key">pk_test_51H5tN2LsM2nr7hcERbIwzT4orsgMPcCVwitTE4OqhUQUjYMxUTvPTHoIsC34WW6Fc77r034TrRvoBNTbBf5sKKR900AjMbtf18</string>
    <string name="no_internet_connection">No Internet Connection</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="oderconfirmmsg">Order Is Ready!</string>
    <string name="lbl_yourorder">Your Order</string>
    <string name="waitingnum">Waiting Number</string>
    <string name="odernumber">Order Number</string>
    <string name="lb_total">Total</string>
    <string name="quantity">Quantity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>