<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_outline_home_24"
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:icon="@drawable/ic_outline_person_outline_24"
            android:id="@+id/nav_Profile"
            android:title="@string/menu_profile" />

        <item
            android:icon="@drawable/ic_outline_person_outline_24"
            android:id="@+id/nav_order_history"
            android:title="@string/menu_oderhistory" />

        <item
            android:icon="@drawable/ic_outline_event_note_24"
            android:id="@+id/nav_booking_history"
            android:title="@string/menu_bokkinghistory" />

        <item
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:id="@+id/nav_logout"
            android:title="@string/menu_logout" />
    </group>


</menu>