<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/White"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/in_close"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="@dimen/_15sdp"
        android:layout_margin="@dimen/_5sdp"
        android:layout_height="@dimen/_15sdp"
        android:layout_gravity="right"
        android:src="@drawable/ic_close" />

    <LinearLayout
        android:layout_margin="@dimen/_20ssp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            style="@style/AppTheme.subtitle"
            android:layout_marginTop="@dimen/_10ssp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_add_instruction" />

        <TextView
            android:textSize="@dimen/_13ssp"
            style="@style/AppTheme.inputLayout"
            android:layout_marginTop="@dimen/_10ssp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instruction" />

        <EditText

            android:layout_marginTop="@dimen/_5sdp"
            style="@style/AppTheme.inputLayout"
            android:id="@+id/ed_instruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_instruction"
            android:background="@drawable/edittext_outline"
            android:padding="@dimen/_10ssp" />

        <Button
            android:id="@+id/bt_instruction"
            style="@style/button_textstlyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10ssp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/button_dark_orange"
            android:text="@string/bt_add" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>