<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="end"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                style="@style/AppTheme.subtitle"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/changepwsTitle" />

            <ImageView
                android:id="@+id/close"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:layout_margin="@dimen/_10sdp"
                android:src="@drawable/ic_close" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_pws"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/changetable"
            android:layout_marginTop="20dp"
            style="@style/AppTheme.inputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                app:errorEnabled="true"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/bt_changetable"
            style="@style/button_textstlyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_dark_orange"
            android:text="@string/change_table"
            android:layout_marginBottom="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>