<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".controllers.ui.accept_oder.OrderAcceptFragment">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/backgroundshape">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_gravity="center"
                    android:src="@drawable/ic_alaramclock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/AppTheme.title"
                    android:textColor="@color/White"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/acceptoder" />

                <TextView
                    android:layout_marginTop="@dimen/margin_15"
                    style="@style/AppTheme.textsize_16sp"
                    android:textColor="@color/White"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/acceptodermsg" />

                <TextView
                    android:layout_marginTop="@dimen/margin_15"
                    style="@style/AppTheme.textsize_16sp"
                    android:textColor="@color/White"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/estimateTime" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/times"
                        style="@style/AppTheme.textsize_16sp"
                        android:textSize="60sp"
                        android:textColor="@color/White"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="15" />

                    <TextView
                        android:layout_marginTop="@dimen/_10sdp"
                        style="@style/AppTheme.textsize_16sp"
                        android:textColor="@color/White"
                        android:gravity="bottom"
                        android:layout_marginBottom="@dimen/_2sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="min" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:gravity="bottom"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/bt_ordermore"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        style="@style/button_textstlyle"
                        android:textColor="@color/orange"
                        android:background="@drawable/button_white_fillbox"
                        android:text="@string/bt_ordermore" />

                    <Button
                        android:id="@+id/bt_checkorder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        style="@style/button_textstlyle"
                        android:textColor="@color/White"
                        android:background="@drawable/edittext_outline"
                        android:layout_marginTop="@dimen/margin_15"
                        android:text="@string/bt_checkorder" />
                </LinearLayout>
            </LinearLayout>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </FrameLayout>
</layout>