<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/backgroundshape"
    tools:context=".controllers.ui.successstatus.SuccessStatus">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".controllers.ui.menu.MenuFragment">

        <ImageView
            android:id="@+id/ic_close"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="45dp"
            android:src="@drawable/ic_close_24dp"
            android:layout_height="45dp" />
        <LinearLayout
            android:orientation="vertical"
            android:gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:src="@drawable/ic_couple_img"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:textColor="@color/White"
                    android:textSize="30sp"
                    android:layout_marginTop="15dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/mssuccess"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:textColor="@color/White"
                    android:textSize="16sp"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="@string/msgbook"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:textColor="@color/White"
                    android:textSize="16sp"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="@string/msgtablenum"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_marginTop="20dp"
                    android:id="@+id/tablenum"
                    android:layout_width="wrap_content"
                    android:inputType="number"
                    android:gravity="center"
                    android:text="00"
                    android:textSize="60sp"
                    android:textStyle="bold"
                    android:textColor="@color/White"
                    android:layout_height="wrap_content" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true">

                    <LinearLayout
                        android:id="@+id/fullscreen_content_controls"
                        style="?android:attr/buttonBarStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center_horizontal"
                        android:background="@color/black_overlay"
                        android:orientation="horizontal"
                        android:visibility="gone"
                        tools:ignore="UselessParent">

                        <Button
                            android:id="@+id/dummy_button"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/dummy_button"
                            android:visibility="gone" />

                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>

            <Button
                android:layout_marginTop="30dp"
                android:id="@+id/bt_odernow"
                style="@style/button_textstlyle"
                android:layout_width="match_parent"
                android:background="@drawable/button_white_fillbox"
                android:padding="10dp"
                android:textColor="@color/orange"
                android:layout_marginBottom="20dp"
                android:layout_height="wrap_content"
                android:text="@string/thanksmsg" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

</FrameLayout>