<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <fragment
        android:id="@+id/maps1"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/lay_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10ssp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="@dimen/_10ssp"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/White"
                    android:padding="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="0.50"
                        android:layout_height="match_parent"
                        android:layout_gravity="left"
                        android:gravity="left|center"
                        android:orientation="vertical">

                        <TextView
                            android:text="$30"
                            style="@style/AppTheme.samllcaption"
                            android:textColor="@color/orange"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/txtamount" />

                        <TextView
                            style="@style/AppTheme.samllcaption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/totalbill" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/change_table"
                            style="@style/AppTheme.samllcaption"
                            android:textColor="@color/orange"
                            android:gravity="center"
                            android:text="@string/change_table"
                            android:layout_width="wrap_content"
                            android:layout_gravity="center"
                            android:padding="@dimen/_8sdp"
                            android:layout_height="match_parent" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_gravity="right"
                            android:gravity="right|center"
                            android:background="@drawable/button_dark_gray"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/table_no"
                                android:textSize="@dimen/_14sdp"
                                style="@style/AppTheme.samllcaption"
                                android:background="@drawable/button_dark_gray"
                                android:layout_width="match_parent"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:layout_height="wrap_content" />

                            <TextView
                                style="@style/AppTheme.samllcaption"
                                android:layout_width="match_parent"
                                android:text="@string/table_no"
                                android:padding="@dimen/_2sdp"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:textStyle="normal"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/White"
                    android:padding="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/AppTheme.samllcaption"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/tableordermsg" />

                    <TextView
                        android:id="@+id/view_detail"
                        style="@style/AppTheme.samllcaption"
                        android:textColor="@color/orange"
                        android:gravity="center"
                        android:text="@string/view_order"
                        android:layout_width="wrap_content"
                        android:layout_gravity="center"
                        android:layout_height="match_parent" />
                </LinearLayout>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycle_mapbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </fragment>
</layout>